--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Hello World 2</title>
   </head>
   <body>
-    Hello World 2!
+    Hello World 2!<br/>
+    Stuff goes here..<br/>
+    <br/>
+    More stuff.
   </body>
 </html>
